# latch

./: DEMO_GUIDE.md  PRD_DESIGN.md  README.md  architecture.md  package-lock.json  package.json  pnpm-lock.yaml
app/: layout.tsx
app/api/counter/: route.ts
app/api/smart-account/: route.ts
app/api/transaction/submit/: route.ts
app/demo/: page.tsx
components/: header.tsx  logo.tsx  mobile-menu.tsx
components/landing/: Hero.tsx
components/ui/: button.tsx
docs/role-plans/: designer.md  operations-lead.md
latch-demo/: Cargo.toml
latch-demo/contracts/counter/src/: lib.rs  test.rs
latch-demo/contracts/counter/test_snapshots/test/: test_increment.1.json  test_multiple_callers.1.json
latch-demo/contracts/ed25519-verifier/: Cargo.toml
latch-demo/contracts/ed25519-verifier/src/: lib.rs  test.rs
latch-demo/contracts/smart-account/: Cargo.toml
latch-demo/contracts/smart-account/src/: lib.rs  test.rs
latch-demo/scripts/: deploy.sh
scripts/: check-tx.mjs  method1-tx-signing.mjs  method2-auth-entry-signing.mjs  test-auth-entry-signing.mjs  test-full-flow.mjs  test-verifier.js  test-verifier.mjs
